--- a/frontend/templates/accounts/mail.html
+++ b/frontend/templates/accounts/mail.html
@@ -1,10 +1,24 @@
 {%   extends 'base.html'%}
-
+{% load static  %}
 {%  block content  %}
 
-<form action="">
-    {% csrf_token %}
-    <h1>Hello this is the mail book</h1>
-</form>
-
+<div class="container">
+    <form action="" method="POST">
+        {% csrf_token %}
+        <div class="form-gruop">
+            <label for="exampleInputmail">Subject</label>
+            <input type="text" name="subject" class="form-control" id="">
+        </div>
+        <div class="form-group">
+            <label for="exmapleInputMail">Messages</label>
+            <input type="text" name="message" class="form-control">
+        </div>
+        <div class="form-group">
+            <label for="exampleInputMail">Email</label>
+            <input type="email" name="email" class="form-control">
+        </div>
+        <button class="btn btn-primary">Send</button>
+    </form>
+    
+</div>
 {%  endblock content %}
