adeded bulk sms messages

--- a/frontend/templates/accounts/sent.html
+++ b/frontend/templates/accounts/sent.html
@@ -5,8 +5,9 @@
 {%   block content %}
 <div class="container">
     <h1>This is HTML page for mail</h1>
-    <p>{{name}}</p>
+    <p>{{subject }}</p>
     <p>{{message}}</p>
+    <p>{{email}}</p>
   
 </div>
 {%   endblock content %}
