--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -26,7 +26,10 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="{%  url 'bulk_sms:sms' %}">Send via SMS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{%  url 'accounts:mail' %}">Send via Mail</a>
         </li>
         <li class="nav-item">
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
